# Multimodal_Cancer_Detection

./: .gitignore  DEVLOG.md  README.md  ROADMAP.md  folder_structure.txt  project_strategy.md  pyproject.toml  requirements.txt
configs/: paths.yaml
docs/: LICENSE_Pancreatic_CT_Cancer.txt  LICENSE_Pancreatic_CT_Control.txt  architecture.md  data_and_ethics.md  figures-guide.md  model_card.md  quickstart.md  timeline.md
notebooks/: 01_ct_preprocessing_checks.ipynb  01_multimodal_cancer_detection.ipynb  02_biomarker_preprocessing_checks.ipynb
reports/: all_slices_k2_cropped.csv  all_slices_k3_cropped.csv  biomarker_preprocessing_summary.json  biomarker_results.json  body_geometry.csv  body_stats_clean_filtered.csv  body_stats_oriented.csv  body_stats_oriented_clean.csv  ct_cluster0_results.json  ct_cluster0_test_predictions.csv  ct_cluster1_results.json  ct_cluster1_test_predictions.csv  ct_model_results.json  ct_preprocessing_summary.json  ct_resnet18_std_all_slices_k2.csv  ct_resnet18_std_all_slices_k6.csv  ct_resnet18_std_all_slices_k6_filtered.csv  ct_resnet18_std_domain_features_k6.csv  ct_resnet18_std_k2_cluster_summary.csv  ct_resnet18_std_k6_cluster_summary.csv  ct_resnet18_std_k_selection_metrics.csv  ct_resnet18_std_metadata.csv  ct_resnet18_std_slices_clustered_k10.csv  ct_resnet50_results_k2_cropped.json  ct_resnet50_test_by_cluster_k2.csv  df_split_cropped.csv  df_split_cropped_k2_cluster0.csv  df_split_cropped_k2_cluster1.csv  final_model_comparison.csv  final_summary.json  fusion_decision_level_weights.csv  fusion_decision_sanity_by_seed.csv  (+14 more)
(+37 files in other folders)
